--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       # Standard proxy env vars for httpx/requests libraries (required for py-clob-client)
       - HTTP_PROXY=http://media-download-gluetun:8888
       - HTTPS_PROXY=http://media-download-gluetun:8888
+      # Strategy settings - only arbitrage enabled, directional disabled
+      - GABAGOOL_DIRECTIONAL_ENABLED=false
     ports:
       - "8500:8000"  # Prometheus metrics
       - "8501:8080"  # Dashboard UI
