--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
       # Standard proxy env vars for httpx/requests libraries (required for py-clob-client)
       - HTTP_PROXY=http://media-download-gluetun:8888
       - HTTPS_PROXY=http://media-download-gluetun:8888
-      # Strategy settings - DRY RUN (disabled 2025-12-18 for recalibration after $90 loss)
-      - GABAGOOL_DRY_RUN=true
+      # Strategy settings - LIVE MODE (re-enabled 2025-12-18 after bug fixes)
+      - GABAGOOL_DRY_RUN=false
       - GABAGOOL_MAX_DAILY_LOSS=10.0
       - GABAGOOL_DIRECTIONAL_ENABLED=false
       - GABAGOOL_NEAR_RESOLUTION_ENABLED=false
