fix: correct Harbor registry URL and image name

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,8 +12,8 @@ on:
         default: 'latest'
 
 env:
-  REGISTRY: registry.server.unarmedpuppy.com
-  IMAGE_NAME: polymarket-bot
+  REGISTRY: harbor.server.unarmedpuppy.com
+  IMAGE_NAME: library/polyjuiced
 
 jobs:
   build:
