--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,52 +2,64 @@ name: Build and Push
 
 on:
   push:
+    branches:
+      - main
     tags:
       - 'v*'
   workflow_dispatch:
     inputs:
-      tag:
-        description: 'Tag to build (e.g., v1.0.0)'
-        required: true
-        default: 'latest'
+      deploy:
+        description: 'Deploy after build'
+        type: boolean
+        default: false
 
 env:
-  REGISTRY: harbor.server.unarmedpuppy.com
-  IMAGE_NAME: library/polyjuiced
+  HARBOR_REGISTRY: ${{ secrets.HARBOR_REGISTRY }}
+  IMAGE_NAME: polymarket-bot
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    environment: Homelab
     steps:
       - uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to private registry
+      - name: Login to Harbor
         uses: docker/login-action@v3
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
-
-      - name: Extract version
-        id: version
-        run: |
-          if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
-            echo "VERSION=${{ github.event.inputs.tag }}" >> $GITHUB_OUTPUT
-          else
-            echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
-          fi
+          registry: ${{ secrets.HARBOR_REGISTRY }}
+          username: ${{ secrets.HARBOR_USERNAME }}
+          password: ${{ secrets.HARBOR_PASSWORD }}
 
       - name: Build and push
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           context: .
           push: true
           tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.version.outputs.VERSION }}
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+            ${{ secrets.HARBOR_REGISTRY }}/library/${{ env.IMAGE_NAME }}:latest
+            ${{ secrets.HARBOR_REGISTRY }}/library/${{ env.IMAGE_NAME }}:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+  deploy:
+    needs: [build]
+    if: startsWith(github.ref, 'refs/tags/') || inputs.deploy == true
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to server
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.DEPLOY_HOST }}
+          username: ${{ secrets.DEPLOY_USER }}
+          key: ${{ secrets.DEPLOY_SSH_KEY }}
+          port: ${{ secrets.DEPLOY_PORT }}
+          script: |
+            cd /home/unarmedpuppy/server
+            sudo git pull origin main
+            cd apps/polymarket-bot
+            sudo docker compose pull
+            sudo docker compose up -d --remove-orphans
+            sudo docker image prune -f
